# roofp

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  MANIFEST.in  README.md  README_zh.md  SKILL.md  pyproject.toml  skill.md
.github/workflows/: ci.yml
examples/: sample_config.json
roofline_plot/: __init__.py  cli.py  plot.py
roofp/: __init__.py  cli.py  mcp_server.py  model.py  plot.py  units.py
tests/: test_cli.py  test_docs.py  test_mcp_protocol.py  test_mcp_tools.py  test_model.py  test_packaging.py  test_plot.py  test_roofline.py  test_units.py  validate_skill.py  verify_distribution.py
