[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roofp"
version = "0.1.0"
description = "A roofline plotting tool with JSON and CLI inputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8"]

[project.scripts]
roofp = "roofp.cli:main"

[tool.setuptools.packages.find]
include = ["roofp*"]

[tool.uv]
package = false
