[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roofp"
version = "0.1.0"
description = "A roofline plotting tool with JSON and CLI inputs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "matplotlib>=3.8",
    "mcp>=1.28.1",
]

[project.scripts]
roofp = "roofp.cli:main"
roofp-mcp = "roofp.mcp_server:main"

[tool.setuptools.packages.find]
include = ["roofp*"]

[tool.uv]
package = false
